proj2_k8s/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: ay262-elijah-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: eliburtner/seat-scout-frontend:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
            ephemeral-storage: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
            ephemeral-storage: "256Mi"
        
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3

        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
