proj2_k8s/frontend/frontend-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-network-policy
  namespace: ay262-parker-namespace
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - {}
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: backend
      ports:
        - protocol: TCP
          port: 5000
    - to:
      - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
